Use PR branch as `BASE_BRANCH` when testing, to make sure script changes are available

--- a/.github/workflows/rollback-release.yml
+++ b/.github/workflows/rollback-release.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Prepare mergeback branch
         id: mergeback-branch
         env:
-          BASE_BRANCH: "main"
+          BASE_BRANCH: ${{ (github.event_name == 'workflow_dispatch' && 'main') || github.ref_name }}
           VERSION: ${{ needs.prepare.outputs.version }}
         run: |
           set -x
