Add template option for installing Java

--- a/pr-checks/checks/autobuild-direct-tracing-with-working-dir.yml
+++ b/pr-checks/checks/autobuild-direct-tracing-with-working-dir.yml
@@ -5,6 +5,7 @@ description: >
   autobuild Action.
 operatingSystems: ["ubuntu", "windows"]
 versions: ["linked", "nightly-latest"]
+installJava: "true"
 env:
   CODEQL_ACTION_AUTOBUILD_BUILD_MODE_DIRECT_TRACING: true
 steps:
