--- a/.github/workflows/__config-export.yml
+++ b/.github/workflows/__config-export.yml
@@ -34,13 +34,13 @@ jobs:
             version: linked
           - os: macos-latest
             version: linked
-          - os: windows-latest
+          - os: windows-2025
             version: linked
           - os: ubuntu-latest
             version: nightly-latest
           - os: macos-latest
             version: nightly-latest
-          - os: windows-latest
+          - os: windows-2025
             version: nightly-latest
     name: Config export
     permissions:
