--- a/.github/workflows/__analyze-ref-input.yml
+++ b/.github/workflows/__analyze-ref-input.yml
@@ -44,7 +44,7 @@ jobs:
             version: default
           - os: macos-latest
             version: default
-          - os: windows-latest
+          - os: windows-2025
             version: default
     name: "Analyze: 'ref' and 'sha' from inputs"
     permissions:
