--- a/.github/workflows/__bundle-toolcache.yml
+++ b/.github/workflows/__bundle-toolcache.yml
@@ -34,7 +34,7 @@ jobs:
             version: linked
           - os: ubuntu-latest
             version: linked
-          - os: windows-latest
+          - os: windows-2025
             version: linked
     name: 'Bundle: Caching checks'
     permissions:
