--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -21,9 +21,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Lint
         id: lint
-        run: npm run-script lint-ci
+        run: npm run lint-ci
 
       - name: Upload sarif
         uses: github/codeql-action/upload-sarif@v3
@@ -74,6 +77,7 @@ jobs:
           # Run any commands referenced in package.json using Bash, otherwise
           # we won't be able to find them on Windows.
           npm config set script-shell bash
+          npm install
           npm test
 
   check-node-version:
