--- a/pr-checks/checks/unset-environment.yml
+++ b/pr-checks/checks/unset-environment.yml
@@ -5,7 +5,7 @@ operatingSystems:
 versions:
   - linked
   - nightly-latest
-installGo: "true"
+installGo: true
 steps:
   - uses: ./../action/init
     id: init
