--- a/pr-checks/checks/all-platform-bundle.yml
+++ b/pr-checks/checks/all-platform-bundle.yml
@@ -3,7 +3,7 @@ description: "Tests using an all-platform CodeQL Bundle"
 versions: ["nightly-latest"]
 operatingSystems: ["ubuntu"]
 useAllPlatformBundle: "true"
-installGo: "true"
+installGo: true
 steps:
   - id: init
     uses: ./../action/init
