--- a/pr-checks/checks/config-input.yml
+++ b/pr-checks/checks/config-input.yml
@@ -1,5 +1,6 @@
 name: "Config input"
 description: "Tests specifying configuration using the config input"
+installNode: true
 operatingSystems: ["ubuntu"]
 versions: ["linked"]
 steps:
