--- a/pr-checks/checks/go-indirect-tracing-workaround.yml
+++ b/pr-checks/checks/go-indirect-tracing-workaround.yml
@@ -4,7 +4,7 @@ description: "Checks that our workaround for indirect tracing for Go 1.21+ on Li
 operatingSystems: ["ubuntu"]
 # pinned to a version which does not support statically linked binaries for indirect tracing
 versions: ["default"]
-installGo: "true"
+installGo: true
 collection: go
 steps:
   - uses: ./../action/init
