--- a/pr-checks/checks/packaging-inputs-js.yml
+++ b/pr-checks/checks/packaging-inputs-js.yml
@@ -1,7 +1,8 @@
 name: "Packaging: Action input"
 description: "Checks that specifying packages using the input to the Action works"
 versions: ["linked", "default", "nightly-latest"] # This feature is not compatible with old CLIs
-installGo: "true"
+installGo: true
+installNode: true
 steps:
   - uses: ./../action/init
     with:
