--- a/pr-checks/checks/test-local-codeql.yml
+++ b/pr-checks/checks/test-local-codeql.yml
@@ -2,7 +2,7 @@ name: "Local CodeQL bundle"
 description: "Tests using a CodeQL bundle from a local file rather than a URL"
 versions: ["nightly-latest"]
 operatingSystems: ["ubuntu"]
-installGo: "true"
+installGo: true
 steps:
   - name: Fetch a CodeQL bundle
     shell: bash
