--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -63,7 +63,7 @@ jobs:
 
       - name: Compile TypeScript
         run: |
-          npm install
+          npm ci
           npm run lint -- --fix
           npm run build
 
