--- a/.github/workflows/query-filters.yml
+++ b/.github/workflows/query-filters.yml
@@ -33,7 +33,7 @@ jobs:
         cache: npm
 
     - name: Install dependencies
-      run: npm install
+      run: npm ci
 
     - name: Prepare test
       id: prepare-test
