Transpile separately in both build and test steps
This means we avoid doing a type checking pass twice

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,8 @@
     "**/.DS_Store": true,
 
     // transpiled JavaScript
+    "build": true,
     "lib": true,
-    "lib-test": true,
   },
   // Installing a new Node package often triggers VS Code's git limit warnings as there is typically
   // an intermediate stage where many files are modified. This setting suppresses these warnings.
