--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "private": true,
   "description": "CodeQL action",
   "scripts": {
-    "build": "node build.mjs",
-    "test": "tsc --project tsconfig.test.json && ava src/**.test.ts --serial --verbose",
-    "test-debug": "ava src/**.test.ts --serial --verbose --timeout=20m",
+    "_build_comment": "echo 'Run the full build so we typecheck the project and can reuse the transpiled files in npm test'",
+    "build": "npm run transpile && node build.mjs",
     "lint": "eslint --report-unused-disable-directives --max-warnings=0 .",
-    "lint-fix": "eslint --report-unused-disable-directives --max-warnings=0 . --fix",
     "lint-ci": "SARIF_ESLINT_IGNORE_SUPPRESSED=true eslint --report-unused-disable-directives --max-warnings=0 . --format @microsoft/eslint-formatter-sarif --output-file=eslint.sarif",
-    "removeNPMAbsolutePaths": "removeNPMAbsolutePaths . --force"
+    "lint-fix": "eslint --report-unused-disable-directives --max-warnings=0 . --fix",
+    "removeNPMAbsolutePaths": "removeNPMAbsolutePaths . --force",
+    "test": "npm run transpile && ava src/**.test.ts --serial --verbose",
+    "test-debug": "npm run test -- --timeout=20m",
+    "transpile": "tsc --build --verbose"
   },
   "ava": {
     "typescript": {
       "rewritePaths": {
-        "src/": "lib-test/"
+        "src/": "build/"
       },
       "compile": false
     }
@@ -61,7 +63,6 @@
     "@eslint/compat": "^1.3.2",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.33.0",
-    "@jgoz/esbuild-plugin-typecheck": "^4.0.3",
     "@microsoft/eslint-formatter-sarif": "^3.1.0",
     "@types/archiver": "^6.0.3",
     "@types/console-log-level": "^1.4.5",
