Ensure `NEW_BRANCH` is checked out in `prepare-mergeback-branch`

--- a/.github/actions/prepare-mergeback-branch/action.yml
+++ b/.github/actions/prepare-mergeback-branch/action.yml
@@ -30,6 +30,9 @@ runs:
       run: |
         set -exu
 
+        # Ensure we are on the new branch
+        git checkout "${NEW_BRANCH}"
+
         # Update the version number ready for the next release
         npm version patch --no-git-tag-version
 
