--- a/.github/workflows/__multi-language-autodetect.yml
+++ b/.github/workflows/__multi-language-autodetect.yml
@@ -93,6 +93,11 @@ jobs:
         with:
           go-version: ${{ inputs.go-version || '>=1.21.0' }}
           cache: false
+      - name: Use Xcode 16
+        shell: bash
+        if: runner.os == 'macOS'
+        run: sudo xcode-select -s "/Applications/Xcode_16.app"
+
       - uses: ./../action/init
         id: init
         with:
