--- a/pr-checks/checks/multi-language-autodetect.yml
+++ b/pr-checks/checks/multi-language-autodetect.yml
@@ -5,7 +5,7 @@ installGo: "true"
 steps:
   - name: Use Xcode 16
     shell: bash
-    if: runner.os == 'macOS'
+    if: runner.os == 'macOS' && matrix.version != 'nightly-latest'
     run: sudo xcode-select -s "/Applications/Xcode_16.app"
 
   - uses: ./../action/init
