--- a/pr-checks/checks/swift-custom-build.yml
+++ b/pr-checks/checks/swift-custom-build.yml
@@ -8,7 +8,7 @@ env:
 steps:
   - name: Use Xcode 16
     shell: bash
-    if: runner.os == 'macOS'
+    if: runner.os == 'macOS' && matrix.version != 'nightly-latest'
     run: sudo xcode-select -s "/Applications/Xcode_16.app"
   - uses: ./../action/init
     id: init
